# lumberjack

./: Cargo.toml  LICENSE  README.md  TODO.md
src/: field.rs  field_info.rs  filter.rs  filter_mode.rs  log.rs  log_line.rs  log_message.rs  log_parser.rs  log_parsing_error.rs  main.rs  parsed_log.rs  raw_log.rs  regex_filter.rs
src/filter/: filter.rs  regex_filter.rs  simple_filter.rs
src/ui/: filter_menu.rs  open_popup.rs
