[package]
name = "lumberjack"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.40", features = ["derive"] }
color-eyre = "0.6.3"
crossterm = "0.29.0"
derive-new = "0.7.0"
getset = "0.1.6"
itertools = "0.14.0"
log = "0.4.27"
ratatui = { version = "0.29.0", features = ["serde", "widget-calendar"] }
regex = "1.11.1"
thiserror = "2.0.12"
unicode-width = "0.2.0"
